# test_package

./: .gitignore  README.md  api.html  environment.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: deploy_site.yml  python-package-conda.yml  unit_tests.yml
_downloads/428dcc9d4087e2f57c7adefc34b163d4/: plot_2d_clouds.ipynb
_downloads/73d7532406cfb77bd92879c2af839383/: plot_2d_clouds.py
_sources/: index.rst.txt
_sources/auto_examples/: index.rst.txt  plot_2d_clouds.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  plot_2d_clouds.html  sg_execution_times.html
doc/: conf.py  index.rst
doc/_build/html/_sources/: api.rst.txt  index.rst.txt
doc/_build/html/_sources/auto_examples/: plot_2d_clouds.rst.txt  sg_execution_times.rst.txt
examples/: plot_2d_clouds.py
linear_regression/: __init__.py  linear_regression.py  regression.py
linear_regression/tests/: test_regression.py
