[metadata]
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
description = Illustration of python packaging
download_url = https://github.com/pierreablin/test_package.git
long_description = file: README.md, LICENSE
long_description_content_type = text/x-markdown
license = BSD (3-clause)
maintainer = Pierre Ablin
maintainer_email = foo@bar.bazz
name = linear_regression
platforms = any

[options]
packages = find:
install_requires =
    numpy
# project_urls =
#     Documentation = https://benchopt.github.io/
#     Source = https://github.com/benchopt/benchOpt
#     Tracker = https://github.com/benchopt/benchOpt/issues

[options.extras_require]
test =
    pytest
    flake8
